--- a/FoodWasteSalling/Server/FoodWasteSalling.Server.csproj
+++ b/FoodWasteSalling/Server/FoodWasteSalling.Server.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0-preview.2.25163.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Client\FoodWasteSalling.Client.csproj" />
